[gd_scene format=3 uid="uid://b3c8c247v3hu4"]

[ext_resource type="Script" uid="uid://dlmr46d7v7guy" path="res://towers/bullet_tower.gd" id="1_ljl8x"]
[ext_resource type="Texture2D" uid="uid://xv0b47p0u33k" path="res://game jam 1 art/range.png" id="2_7v4cw"]
[ext_resource type="Script" uid="uid://b752caw6yueob" path="res://range checker.gd" id="2_03766"]
[ext_resource type="Texture2D" uid="uid://c5oltxt0rilpu" path="res://game jam 1 art/gun1.png" id="2_omxrm"]
[ext_resource type="Texture2D" uid="uid://dm4ta267yv4d" path="res://game jam 1 art/Turret-Base.png" id="3_7v4cw"]
[ext_resource type="Texture2D" uid="uid://cpqer36t24s06" path="res://game jam 1 art/gun1-Sheet.png" id="4_omxrm"]
[ext_resource type="Texture2D" uid="uid://csu5hyq3itnvg" path="res://game jam 1 art/visual effect icons.png" id="6_suoaq"]
[ext_resource type="Texture2D" uid="uid://be5s2n8fl1k7e" path="res://game jam 1 art/muzzele shock.png" id="8_uraqg"]
[ext_resource type="Script" uid="uid://dfqwun7kvsgfx" path="res://towers/place_holder.gd" id="9_n6fps"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n6fps"]
atlas = ExtResource("2_omxrm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwllq"]
atlas = ExtResource("3_7v4cw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2jl5"]
atlas = ExtResource("4_omxrm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_uraqg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6fps")
}],
"loop": true,
"name": &"defalt 2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwllq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2jl5")
}],
"loop": true,
"name": &"frozen gun",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_suoaq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_03766"]
radius = 56.008926

[sub_resource type="AtlasTexture" id="AtlasTexture_uraqg"]
atlas = ExtResource("6_suoaq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_buywi"]
atlas = ExtResource("6_suoaq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_n8uu4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uraqg")
}],
"loop": true,
"name": &"both",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_buywi")
}],
"loop": true,
"name": &"winter effect",
"speed": 5.0
}]

[node name="bullet tower" type="StaticBody2D" unique_id=447542304]
collision_layer = 2
script = ExtResource("1_ljl8x")

[node name="Timer" type="Timer" parent="." unique_id=956931091]
wait_time = 0.75
autostart = true

[node name="spawn_bullet" type="Node2D" parent="." unique_id=1006166996]
position = Vector2(14, 0)

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="." unique_id=161108874]
sprite_frames = SubResource("SpriteFrames_uraqg")
autoplay = "default"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1271075293]
position = Vector2(4, -0.21662903)
rotation = 1.5707964
scale = Vector2(1.0760393, 1)
sprite_frames = SubResource("SpriteFrames_uraqg")
animation = &"frozen gun"
autoplay = "defalt 2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=51557197]
position = Vector2(-1, -1)
shape = SubResource("CircleShape2D_suoaq")

[node name="muzzele shock" type="Sprite2D" parent="." unique_id=967697176]
position = Vector2(18.000002, -2.250001)
scale = Vector2(0.71875, 0.67187494)
texture = ExtResource("8_uraqg")

[node name="tower" type="Area2D" parent="." unique_id=244548655]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tower" unique_id=2011007525]
shape = SubResource("CircleShape2D_03766")
script = ExtResource("2_03766")

[node name="Sprite2D" type="Sprite2D" parent="tower/CollisionShape2D" unique_id=1265470456]
modulate = Color(1, 1, 1, 0.7058824)
scale = Vector2(1.78125, 1.8125)
texture = ExtResource("2_7v4cw")

[node name="icons" type="AnimatedSprite2D" parent="." unique_id=1697024950]
position = Vector2(0, -31)
sprite_frames = SubResource("SpriteFrames_n8uu4")
animation = &"winter effect"
autoplay = "winter effect"

[node name="icons2" type="AnimatedSprite2D" parent="." unique_id=1831060597]
position = Vector2(0, -31)
sprite_frames = SubResource("SpriteFrames_n8uu4")
animation = &"both"
autoplay = "both"

[node name="place holder" type="Sprite2D" parent="." unique_id=757719397]
visible = false
position = Vector2(-12, -11)
script = ExtResource("9_n6fps")

[node name="Button" type="Button" parent="place holder" unique_id=1145939117]
self_modulate = Color(0.99999994, 0.11322755, 0.16187015, 1)
offset_right = 23.636364
offset_bottom = 20.0
theme_override_font_sizes/font_size = 8
text = "20$"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_shape_entered" from="tower" to="." method="_on_tower_body_shape_entered"]
[connection signal="body_shape_exited" from="tower" to="." method="_on_tower_body_shape_exited"]
[connection signal="pressed" from="place holder/Button" to="." method="_on_button_pressed"]
